feat: 在阅读页实现页面内查找功能
- 新增 `Ctrl+F`/`Cmd+F` 快捷键唤起/隐藏搜索栏，`Esc` 关闭。
- 实现实时搜索并注入 `<mark>` 标签高亮匹配项，区分当前/其他匹配项底色。
- 支持长文分块搜索（≥ 50000 字符），跨块统计并实现上/下一个按钮导航与自动滚动定位。
- 新增搜索浮动栏，包含大小写开关与关闭按钮。
- 新增相关文件：`reader_search_bar.dart`、`reader_search_providers.dart`、`reader_search_service.dart`。
- 更新国际化文案并完成代码验证。

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -494,6 +494,26 @@
   "@searchInContent": {
     "description": "searchInContent"
   },
+  "findInPage": "Find in page",
+  "@findInPage": {
+    "description": "findInPage"
+  },
+  "previousMatch": "Previous match",
+  "@previousMatch": {
+    "description": "previousMatch"
+  },
+  "nextMatch": "Next match",
+  "@nextMatch": {
+    "description": "nextMatch"
+  },
+  "caseSensitive": "Case sensitive",
+  "@caseSensitive": {
+    "description": "caseSensitive"
+  },
+  "close": "Close",
+  "@close": {
+    "description": "close"
+  },
   "groupingAndSorting": "Grouping & Sorting",
   "@groupingAndSorting": {
     "description": "groupingAndSorting"
