feat: 为数据库恢复弹窗添加完整 i18n 支持及路径复制功能
- 新增中/英/繁三语本地化资源文件（`app_*.arb`）及对应的本地化实现类。
- 在 `db_recovery_notice.dart` 弹窗中实现路径一键复制功能，使用 `Clipboard` 复制并显示 `SnackBar` 提示。
- 通过 `flutter analyze` 及 `isar_backward_compat_test.dart` 测试验证。

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1183,5 +1183,41 @@
   "clearTranslation": "Clear translation",
   "@clearTranslation": {
     "description": "Action label to clear/hide the translated view"
+  },
+  "dbRecoveryTitle": "Database recovery",
+  "@dbRecoveryTitle": {
+    "description": "Title for the database recovery dialog"
+  },
+  "dbRecoveryDescription": "The app detected a database issue and performed recovery. Your data was preserved on disk (backup / moved file).",
+  "@dbRecoveryDescription": {
+    "description": "Description text shown in the database recovery dialog"
+  },
+  "dbRecoveryTimeLabel": "Time",
+  "@dbRecoveryTimeLabel": {
+    "description": "Label for the recovery time field"
+  },
+  "dbRecoveryDbNameLabel": "DB name",
+  "@dbRecoveryDbNameLabel": {
+    "description": "Label for the database name field"
+  },
+  "dbRecoveryOpenedAsLabel": "Opened as",
+  "@dbRecoveryOpenedAsLabel": {
+    "description": "Label for the fallback database name field"
+  },
+  "dbRecoveryBackupPathLabel": "Backup",
+  "@dbRecoveryBackupPathLabel": {
+    "description": "Label for the backup file path field"
+  },
+  "dbRecoveryMovedOriginalPathLabel": "Moved original",
+  "@dbRecoveryMovedOriginalPathLabel": {
+    "description": "Label for the moved original db file path field"
+  },
+  "dbRecoveryErrorLabel": "Error",
+  "@dbRecoveryErrorLabel": {
+    "description": "Label for the error message field"
+  },
+  "dbRecoveryDataPreservedHint": "Tip: Use the copy buttons to copy paths for troubleshooting or support.",
+  "@dbRecoveryDataPreservedHint": {
+    "description": "Hint shown at the bottom of the recovery dialog"
   }
 }
