--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -1184,5 +1184,41 @@
   "clearTranslation": "关闭翻译",
   "@clearTranslation": {
     "description": "清除/隐藏翻译视图的操作文案"
+  },
+  "dbRecoveryTitle": "数据库恢复",
+  "@dbRecoveryTitle": {
+    "description": "数据库恢复弹窗标题"
+  },
+  "dbRecoveryDescription": "应用检测到数据库异常，已自动进行恢复。你的数据已在磁盘上保留（备份/已移动的原库文件）。",
+  "@dbRecoveryDescription": {
+    "description": "数据库恢复弹窗描述文案"
+  },
+  "dbRecoveryTimeLabel": "时间",
+  "@dbRecoveryTimeLabel": {
+    "description": "恢复时间字段标签"
+  },
+  "dbRecoveryDbNameLabel": "数据库名",
+  "@dbRecoveryDbNameLabel": {
+    "description": "数据库名称字段标签"
+  },
+  "dbRecoveryOpenedAsLabel": "实际打开为",
+  "@dbRecoveryOpenedAsLabel": {
+    "description": "回退数据库名称字段标签"
+  },
+  "dbRecoveryBackupPathLabel": "备份",
+  "@dbRecoveryBackupPathLabel": {
+    "description": "备份路径字段标签"
+  },
+  "dbRecoveryMovedOriginalPathLabel": "已移动原库",
+  "@dbRecoveryMovedOriginalPathLabel": {
+    "description": "已移动的原库路径字段标签"
+  },
+  "dbRecoveryErrorLabel": "错误",
+  "@dbRecoveryErrorLabel": {
+    "description": "错误信息字段标签"
+  },
+  "dbRecoveryDataPreservedHint": "提示：可使用右侧复制按钮复制路径，便于排查或反馈。",
+  "@dbRecoveryDataPreservedHint": {
+    "description": "数据库恢复弹窗底部提示"
   }
 }
